--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<base href="./" />
 		<title>Mohamad | Portfolio</title>
 		<link rel="icon" type="image/png" href="images/me.png" />
 		<meta name="title" content="Portfolio | Mohamad Abdi" />
@@ -88,7 +87,7 @@
 						</div>
 					</a>
 					<div class="left-icon-area">
-						<a class="logo" href="./">
+						<a class="logo" href="/">
 							<p>Mohamad Abdi <span></span></p>
 						</a>
 					</div>
