added new project and switched order of education

--- a/index.html
+++ b/index.html
@@ -1213,6 +1213,30 @@
 					<div class="relative-use">
 						<div class="all-portfolio">
 
+							<!-- UnderstandAI -->
+							<div class="single-portfolio">
+								<div class="portfolio-img" id="project-understand-ai">
+									<img src="./images/ProjectsImage/understand.png" alt="UnderstandAI" />
+								</div>
+								<div class="portfolio-text">
+									<a target="_blank" href="https://github.com/abdimoh596/UnderstandAI">
+										<h6>UnderstandAI – Code Analysis Web App</h6>
+									</a>
+									<p>Spring Framework · Java · AWS · Authentication</p>
+									<div class="project-content">
+										<span>Code Repository Explainer with AI</span>
+										<div class="project-links">
+											<a target="_blank" href="https://github.com/abdimoh596/UnderstandAI">
+												<img width="34" height="34" src="https://img.icons8.com/glyph-neue/64/github.png" alt="github"/>
+											</a>
+											<a target="_blank" href="https://youtube.com/shorts/KjQzz_Ne67U?feature=share">
+												<img width="34" height="34" src="https://img.icons8.com/external-smashingstocks-detailed-outline-smashing-stocks/34/external-links-seo-and-web-smashingstocks-detailed-outline-smashing-stocks.png" alt="demo"/>
+											</a>
+										</div>
+									</div>
+								</div>
+							</div>
+
 							<!-- Songly -->
 							<div class="single-portfolio">
 								<div class="portfolio-img" id="project-songly">
@@ -1352,41 +1376,8 @@
 											<p>Explore my<br />education<br />journey now</p>
 										</div>
 									</div>
-									<!-- Step 1: High School Diploma -->
+									<!-- Step 1: University of Washington Degree -->
 									<div class="single-process process-1">
-										<div class="process-text-wrapper">
-											<span>Aug 2018 – Jun 2022</span>
-											<h2>International School of Bellevue</h2>
-											<h4>High School Diploma</h4>
-											<p>
-												Rigorous STEM-focused curriculum with a global perspective.
-											</p>
-											<div class="next-step" data-target="1">
-												<i class="fas fa-chevron-down"></i>
-											</div>
-										</div>
-									</div>
-									<!-- Step 2: High School GPA & Activities -->
-									<div class="single-process process-2">
-										<div class="process-text-wrapper">
-											<h2>Academic Achievements & Activities</h2>
-											<p>
-												<b>GPA:</b> 4.0/4.0<br/>
-												<b>Activities:</b>
-												<ul style="margin-bottom: 0;">
-													<li>Science National Honor Society</li>
-													<li>Math National Honor Society</li>
-													<li>National Tech Honor Society</li>
-													<li>National French Honor Society</li>
-												</ul>
-											</p>
-											<div class="next-step" data-target="2">
-												<i class="fas fa-chevron-down"></i>
-											</div>
-										</div>
-									</div>
-									<!-- Step 3: University of Washington Degree -->
-									<div class="single-process process-3">
 										<div class="process-text-wrapper">
 											<span>2022 – 2024</span>
 											<h2>University of Washington</h2>
@@ -1394,13 +1385,13 @@
 											<p>
 												Top-ranked program with a focus on software engineering, systems, and applied computing.
 											</p>
-											<div class="next-step" data-target="3">
+											<div class="next-step" data-target="1">
 												<i class="fas fa-chevron-down"></i>
 											</div>
 										</div>
 									</div>
-									<!-- Step 4: UW Activities & Notable Courses -->
-									<div class="single-process process-4">
+									<!-- Step 2: UW Activities and Notable Courses -->
+									<div class="single-process process-2">
 										<div class="process-text-wrapper">
 											<h2>Activities & Notable Courses</h2>
 											<p>
@@ -1412,6 +1403,39 @@
 													<li>CSE 344: Data Management</li>
 													<li>CSE 442: Data Visualization</li>
 													<li>CSE 403: Software Engineering</li>
+												</ul>
+											</p>
+											<div class="next-step" data-target="2">
+												<i class="fas fa-chevron-down"></i>
+											</div>
+										</div>
+									</div>
+									<!-- Step 3: High School Diploma -->
+									<div class="single-process process-3">
+										<div class="process-text-wrapper">
+											<span>Aug 2018 – Jun 2022</span>
+											<h2>International School of Bellevue</h2>
+											<h4>High School Diploma</h4>
+											<p>
+												Rigorous STEM-focused curriculum with a global perspective.
+											</p>
+											<div class="next-step" data-target="3">
+												<i class="fas fa-chevron-down"></i>
+											</div>
+										</div>
+									</div>
+									<!-- Step 4: High School GPA and Activities -->
+									<div class="single-process process-4">
+										<div class="process-text-wrapper">
+											<h2>Academic Achievements & Activities</h2>
+											<p>
+												<b>GPA:</b> 4.0/4.0<br/>
+												<b>Activities:</b>
+												<ul style="margin-bottom: 0;">
+													<li>Science National Honor Society</li>
+													<li>Math National Honor Society</li>
+													<li>National Tech Honor Society</li>
+													<li>National French Honor Society</li>
 												</ul>
 											</p>
 											<div class="next-step" data-target="4">
@@ -1460,7 +1484,7 @@
 			<div class="footer-col">
 				<div class="copyright-area mobile-text-center">
 					<p style="display: inline-block; margin:auto; white-space: nowrap; width: 100%;">
-						© 2025 Created & Developed by Mohamad <br />
+						© 2025 Created & Developed by Mohamad Abdi <br />
 						All copy right reserved.
 					</p>
 					<div class="links">
