updated project tech stack

--- a/index.html
+++ b/index.html
@@ -1222,7 +1222,7 @@
 									<a target="_blank" href="https://github.com/abdimoh596/UnderstandAI">
 										<h6>UnderstandAI – Code Analysis Web App</h6>
 									</a>
-									<p>Spring Framework · Java · AWS · Authentication</p>
+									<p>Spring Framework · Java · OpenRouter · GPT · OAuth</p>
 									<div class="project-content">
 										<span>Code Repository Explainer with AI</span>
 										<div class="project-links">
