fixed grammatical error

--- a/index.html
+++ b/index.html
@@ -1032,7 +1032,7 @@
 						<p class="fade-up-item introp" style="letter-spacing: 0.02rem">
 							Hey! I'm Mohamad (I also go by Mo) — I'm a passionate Software Engineer with a love for coding, creativity, and lifelong learning 🎯.
 							<br /><br />
-							I've been immersed in tech since my parents first put a computer in my room in 4th grade. At my time at the University of Washington, I deepened my skills in Java, distributed systems, and cloud technologies like AWS ☁️. My journey took me through exciting projects like game development 🎮 and building a group activity platform 🗓️, and even to Amazon where I optimized large-scale infrastructure performance 🚀.
+							I've been immersed in tech since my parents first put a computer in my room in 4th grade. During my time at the University of Washington, I deepened my skills in Java, distributed systems, and cloud technologies like AWS ☁️. My journey took me through exciting projects like game development 🎮 and building a group activity platform 🗓️, and even to Amazon where I optimized large-scale infrastructure performance 🚀.
 							<br /><br />
 							Beyond coding, you'll often find me shooting hoops 🏀, swimming 🏊‍♂️, lifting weights 🏋️, or getting lost in the rhythm of music 🎶 — especially the timeless beauty of old Persian classics.
 							<br /><br />
