--- a/index.html
+++ b/index.html
@@ -144,7 +144,11 @@
 							<span class="landing-fade-up-item">Mohamad</span>
 							<span class="platinum-color landing-fade-up-item">Abdi</span>
 							<br />
-							<span class="landing-fade-up-item">Software Engineer</span>
+							<span class="platinum-color landing-fade-up-item">Software</span>
+							<span class="landing-fade-up-item">Engineer</span>
+							<br />
+							<span class="platinum-color landing-fade-up-item">Data</span>
+							<span class="landing-fade-up-item">Engineer</span>
 						</h2>
 						<p class="mobile-text-center landing-fade-up-item">
 							"Always Learning"
@@ -236,14 +240,14 @@
 																<div class="col-md-2">
 																	<div class="logo">
 																		<img
-																			src="https://img.icons8.com/color/48/javascript--v1.png"
-																			alt="JavaScript"
+																			src="images/icon/ts.png"
+																			alt="TypeScript"
 																		/>
 																	</div>
 																</div>
 																<div class="col-md-10 pl-4">
-																	<h6>JavaScript</h6>
-																	<p>Proficient in JavaScript for web development.</p>
+																	<h6>TypeScript</h6>
+																	<p>Proficient in TypeScript for web development.</p>
 																</div>
 															</div>
 														</div>
@@ -481,6 +485,22 @@
 																</div>
 															</div>
 														</div>
+														<div class="col-md-6 py-3 pr-4 pl-0 single-skill">
+															<div class="row">
+																<div class="col-md-2">
+																	<div class="logo">
+																		<img
+																			src="images/icon/azure.png"
+																			alt="Azure"
+																		/>
+																	</div>
+																</div>
+																<div class="col-md-10 pl-4">
+																	<h6>Azure</h6>
+																	<p>Creating data pipelines in Azure Data Factory and more.</p>
+																</div>
+															</div>
+														</div>
 													</div>
 												</div>
 											</div>
@@ -558,6 +578,22 @@
                               </div>
                             </div>
 														</div>
+														<div class="col-md-6 py-3 pr-4 pl-0 single-skill">
+                            <div class="row">
+                              <div class="col-md-2">
+                                <div class="logo">
+																		<img
+																			src="images/icon/cursor.png"
+																			alt="Cursor"
+																		/>
+                                </div>
+                              </div>
+                              <div class="col-md-10 pl-4">
+																	<h6>Cursor</h6>
+																	<p>Working efficiently with AI enhanced code editor.</p>
+                              </div>
+                            </div>
+														</div>
 													</div>
 												</div>
 											</div>
@@ -565,6 +601,7 @@
 									</div>
 								</div>
 							</div>
+							
 							<div class="person-beside">
 								<svg
 									width="100%"
@@ -688,12 +725,12 @@
 															<div class="row">
 																<div class="col-2">
 																	<div class="logo">
-																		<img src="https://img.icons8.com/color/48/javascript--v1.png" alt="JavaScript"/>
+																		<img src="images/icon/ts.png" alt="TypeScript"/>
 																	</div>
 																</div>
 																<div class="col-10 pl-4">
-																	<h6>JavaScript</h6>
-																	<p>Proficient in JavaScript for web development.</p>
+																	<h6>TypeScript</h6>
+																	<p>Proficient in TypeScript for web development.</p>
 																</div>
 															</div>
 														</div>
@@ -892,6 +929,19 @@
 																</div>
 															</div>
 														</div>
+														<div class="col-12 py-3 px-0 single-skill">
+															<div class="row">
+																<div class="col-2">
+																	<div class="logo">
+																		<img src="images/icon/azure.png" alt="Azure"/>
+																	</div>
+																</div>
+																<div class="col-10 pl-4">
+																	<h6>Azure</h6>
+																	<p>Creating data pipelines in Azure Data Factory and more.</p>
+																</div>
+															</div>
+														</div>
 													</div>
 												</div>
 											</div>
@@ -954,6 +1004,19 @@
 																<div class="col-10 pl-4">
 																	<h6>Terraform</h6>
 																	<p>Used for infrastructure as code.</p>
+																</div>
+															</div>
+														</div>
+														<div class="col-12 py-3 px-0 single-skill">
+															<div class="row">
+																<div class="col-2">
+																	<div class="logo">
+																		<img src="images/icon/cursor.png" alt="Cursor"/>
+																	</div>
+																</div>
+																<div class="col-10 pl-4">
+																	<h6>Cursor</h6>
+																	<p>Working efficiently with AI enhanced code editor.</p>
 																</div>
 															</div>
 														</div>
@@ -1069,7 +1132,7 @@
 			<div class="sticky-height">
 				<div class="sticky-3-board">
 					<div class="container-fluid sticky-relative">
-						<!-- Amazon -->
+						<!-- Agentify -->
 						<div class="row single-board">
 							<div class="col-md-12">
 								<div class="container">
@@ -1077,19 +1140,21 @@
 										<div class="col-md-2"></div>
 										<div class="col-md-8 advantages-detail">
 											<div class="single-advantage mobile-text-center fade-up-box">
-												<span class="fade-up-item">2022 – Present</span>
+												<br>
+												<br>
 												<h4 class="fade-up-item">
-													Freelance and Personal Projects
+													Full Stack Developer <br />at
 												</h4>
-												<a style="font-size: 30px; border-bottom: 1px solid black;" href="https://github.com/abdimoh596">
-													<i style="color: #27ae60">@</i><i style="color: black"> Independent</i>
+												<a style="font-size: 30px;" href="https://github.com/abdimoh596">
+													<img src="images/agentify.png" alt="Agentify Logo" style="width: 200px;"/>
 												</a>
 												<br>
+												<span class="fade-up-item">September 2025 – Present</span>
+												<br>
 												<p class="fade-up-item">
-													• <b>Let's Race:</b> Built a Unity racing game with a custom Autumn-themed map, featuring real-time leaderboards and cutscenes; processed <b>100+ gameplay sessions</b> during testing.<br>
-													• <b>Lemme Know:</b> Engineered a group activity planning platform with integrated calendar and polling; implemented backend infrastructure supporting up to <b>100 concurrent events</b>.<br>
-													• <b>Songly:</b> Developed a music discovery app in Flutter/Dart using custom REST APIs and Spotify integration; processes <b>90+ song recommendations per session</b> and handles <b>6+ API calls per user action</b>.<br>
-													• Designed, tested, and deployed full-stack solutions, consistently delivering projects on time and exceeding project requirements.
+													• Developed and maintained core features of Agentify's athlete operating system concierge service.<br>
+													• Built and shipped concierge workflows (Next.js + TypeScript + shadcn/ui), including premium-gated service tiles and multi-step intake forms (validation, toasts, summaries).<br>
+													• Led UX polish and componentization (Calendar, Tooltip, Popover, Checkbox, Data Table), establishing a reusable UI system and reducing page build time by 25% across new concierge services.
 												</p>
 										</div>
 									</div>
@@ -1098,7 +1163,7 @@
 							</div>
 						</div>
 						</div>
-						<!-- SEAL Lab -->
+						<!-- Amazon -->
 						<div class="row single-board">
 							<div class="col-md-12">
 								<div class="container">
@@ -1106,13 +1171,16 @@
 										<div class="col-md-2"></div>
 										<div class="col-md-8 advantages-detail">
 									<div class="single-advantage mobile-text-center fade-up-box">
-									  <span class="fade-up-item">June 2024 – September 2024</span>
+										<br>
+										<br>
 												<h4 class="fade-up-item">
-										Software Development Engineer Intern <br />at
+										Software Engineer Intern <br />at
 												</h4>
-									  <a style="font-size: 30px; border-bottom: 1px solid black;" href="https://www.amazon.com/">
-										<i style="color: #ff9900">@</i><i style="color: black"> Amazon</i>
+									  <a style="font-size: 30px;" href="https://www.amazon.com/">
+										<img src="images/amz.png" alt="Amazon Logo" style="width: 150px;"/>
 									  </a>
+									  <br>
+									  <span class="fade-up-item">June 2024 – September 2024</span>
 									  <br>
 												<p class="fade-up-item">
 										• Migrated SABLE cluster metadata for the North America region from a legacy internal system to AWS Aurora, supporting over <b>500 billion daily transactions</b> in the region.<br>
@@ -1128,7 +1196,7 @@
 								</div>
 							</div>
 						</div>
-						  <!-- Freelance/Personal Projects -->
+						  <!-- SEAL Lab -->
 						<div class="row single-board">
 							<div class="col-md-12">
 								<div class="container">
@@ -1136,13 +1204,17 @@
 										<div class="col-md-2"></div>
 										<div class="col-md-8 advantages-detail">
 									<div class="single-advantage mobile-text-center fade-up-box">
-									  <span class="fade-up-item">October 2021 – January 2022</span>
+										<br>
+										<br>
 												<h4 class="fade-up-item">
 										Software Developer <br />at
 												</h4>
-									  <a style="font-size: 30px; border-bottom: 1px solid black;" href="https://www.uwseal.org/">
-										<i style="color: #2e86c1">@</i><i style="color: black"> S.E.A.L Lab</i>
+									  <a style="font-size: 30px;" href="https://www.uwseal.org/">
+										<img src="images/seal.png" alt="SEAL Lab Logo" style="width: 150px;"/>
+										<br /><i style="color: black"> S.E.A.L Lab</i>
 									  </a>
+									  <br>
+									  <span class="fade-up-item">October 2021 – January 2022</span>
 									  <br>
 												<p class="fade-up-item">
 										• Developed a computer vision mobile app for colon cancer patients to measure medical device dimensions, writing <b>500+ lines of Java/Python code</b>.<br>
